--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Moon</title>
 </head>
 
-<body>
+<body style="padding-left: 50px">
     <h1>The Moon</h1>
     <h2>A Natural Satellite</h2>
     <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1⁄81 its' mass.</p>
